# can-monitor

./: .cproject  .gitignore  .gitmodules  .mxproject  .project  Cargo.toml  README.md  can-monitor.ioc
.cargo/: config.toml
Core/Inc/: main.h  stm32c0xx_hal_conf.h  stm32c0xx_it.h
Core/Src/: main.c  stm32c0xx_hal_msp.c  stm32c0xx_it.c
Core/Startup/: startup_stm32c092kctx.s
can-monitor.cydsn/: can-monitor.cyprj  can-monitor.cyprj.naoki  main.c
can-monitor.cydsn/TopDesign/: TopDesign.cysch
kicad/: can-monitor.kicad_prl  can-monitor.kicad_pro  can-monitor.kicad_sch  ~can-monitor.kicad_sch.lck
src/: main.rs
