[package]
edition = "2024"
name = "can-monitor"
version = "0.1.0"
license = "MIT"
publish = false

[dependencies]
# Change stm32c031c6 to your chip name, if necessary.
embassy-stm32 = { git = "https://github.com/embassy-rs/embassy.git", rev = "26ad6ec71de3d55e5cbc04a72d7174185f3e86ab", features = [
  "defmt",
  "time-driver-any",
  "stm32c092kc",
  "memory-x",
  "unstable-pac",
  "exti",
  "chrono",
] }
embassy-sync = { git = "https://github.com/embassy-rs/embassy.git", rev = "26ad6ec71de3d55e5cbc04a72d7174185f3e86ab", features = [
  "defmt",
] }
embassy-executor = { git = "https://github.com/embassy-rs/embassy.git", rev = "26ad6ec71de3d55e5cbc04a72d7174185f3e86ab", features = [
  "platform-cortex-m",
  "executor-thread",
  "defmt",
] }
embassy-time = { git = "https://github.com/embassy-rs/embassy.git", rev = "26ad6ec71de3d55e5cbc04a72d7174185f3e86ab", features = [
  "defmt",
  "defmt-timestamp-uptime",
  "tick-hz-32_768",
] }

defmt = "1.0.1"
defmt-rtt = "1.0.0"

cortex-m = { version = "0.7.6", features = ["critical-section-single-core"] }
cortex-m-rt = "0.7.0"
embedded-hal = "0.2.6"
panic-probe = { version = "1.0.0", features = ["print-defmt"] }
heapless = { version = "0.8", default-features = false }
chrono = { version = "^0.4", default-features = false }
embedded-can = "0.4"
embassy-futures = { git = "https://github.com/embassy-rs/embassy.git", rev = "26ad6ec71de3d55e5cbc04a72d7174185f3e86ab" }

[profile.release]
debug = 2
opt-level = "s"
lto = true

[package.metadata.embassy]
build = [{ target = "thumbv6m-none-eabi", artifact-dir = "out" }]

[features]
# choose HSI or HSE for the clock source
default = ["hse"]
hse = []
hsi = []
# optionally enables bit rate switching in CAN tx
bit-rate-switching = []
